Manipulator showing incorrect local axes in armature pose mode. #33575

Closed
opened 2012-12-17 04:58:03 +01:00 by Tony Mullen · 6 comments

%%%Mac OS X, official 2.65 release and build 53020M.

Manipulator displays global axes when it should display local axes in pose mode.

Open attached file. Local is selected in the header and the armature is in pose mode. However, manipulators display global axes. Drag the green arrow. The bone moves along the correct local Y axis, at a right angle to the direction you're dragging. %%%

%%%Mac OS X, official 2.65 release and build 53020M. Manipulator displays global axes when it should display local axes in pose mode. Open attached file. Local is selected in the header and the armature is in pose mode. However, manipulators display global axes. Drag the green arrow. The bone moves along the correct local Y axis, at a right angle to the direction you're dragging. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%This is working as expected 'Local' space means 'object space' which in this case is the same as global since the object isnt transformed.

you probably are looking for 'Normal'.

The term 'Normal' is fine for meshes, but quite confusing in this context.

Even so, this isnt a bug. Closing.
%%%

%%%This is working as expected 'Local' space means 'object space' which in this case is the same as global since the object isnt transformed. you probably are looking for 'Normal'. The term 'Normal' is fine for meshes, but quite confusing in this context. Even so, this isnt a bug. Closing. %%%
Author

%%%Actually, I know about the behavior of Normal coordinates in pose mode. My understanding (and what Nathan Veghdal claims in his rigging video) is that the Loca Coordinates should reflect the coordinates of the bone in edit mode (even when the object is in pose mode).

In any case, this is DEFINITELY a bug, because if you drag the green arrow, the bone does not move in the direction of the green arrow, but rather 90 degrees from it. There is no excuse at all for a manipulator to express one coordinate system as drawn on the screen, but to transform the object or bone according to a completely different coordinate system. %%%

%%%Actually, I know about the behavior of Normal coordinates in pose mode. My understanding (and what Nathan Veghdal claims in his rigging video) is that the Loca Coordinates should reflect the coordinates of the bone *in edit mode* (even when the object is in pose mode). In any case, this is DEFINITELY a bug, because if you drag the green arrow, the bone does not move in the direction of the green arrow, but rather 90 degrees from it. There is no excuse at all for a manipulator to express one coordinate system as drawn on the screen, but to transform the object or bone according to a completely different coordinate system. %%%
Author

%%%Here's a short video showing the problematic behavior:

https://dl.dropbox.com/u/1412402/coordinateproblem.avi%%%

%%%Here's a short video showing the problematic behavior: https://dl.dropbox.com/u/1412402/coordinateproblem.avi%%%

%%%fixed r53102. also noticed active-element doesnt work for pose mode, will fix that next!

note, that when there are many bones selected - they each move on their own axis, so whatever is drawn may not mean a lot.

The way it works now if a few bones are all at similar rotation the manipulator axis will be approximately right, but if they are all very different its quite meaningless.%%%

%%%fixed r53102. also noticed active-element doesnt work for pose mode, will fix that next! note, that when there are many bones selected - they each move on their own axis, so whatever is drawn may not mean a lot. The way it works now if a few bones are all at similar rotation the manipulator axis will be approximately right, but if they are all very different its quite meaningless.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#33575
No description provided.