fix [#33575] Manipulator showing incorrect local axes in armature pose mode.